<resources>
    <string name="app_name">Pawfect Tail</string>
    <string name="update_post">Post an Update</string>
    <string name="detail_post">Post Details</string>
    <string name="name_req">Your Name<font color='#FF0000'>*</font></string>
    <string name="city_req">Your City<font color='#FF0000'>*</font></string>
    <string name="desc_req">Describe your paw friend<font color='#FF0000'>*</font></string>
    <string name="contact_req">Email/Phone<font color='#FF0000'>*</font></string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="contact">Contact Details</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="add_fragment_title">Add Item</string>
    <string name="edit_fragment_title">Edit Item</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>