<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/animalListFragment">

    <fragment
        android:id="@+id/animalListFragment"
        android:name="com.example.pawfecttail.AnimalListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_animal_list" >
        <action
            android:id="@+id/action_animalListFragment_to_addAnimalFragment"
            app:destination="@id/addAnimalFragment" />
        <action
            android:id="@+id/action_animalListFragment_to_animalDetailFragment"
            app:destination="@id/animalDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/addAnimalFragment"
        android:name="com.example.pawfecttail.AddAnimalFragment"
        android:label="@string/update_post"
        tools:layout="@layout/fragment_add_animal">
        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="animal_id"
            android:defaultValue="-1"
            app:argType="integer" />
        <action
            android:id="@+id/action_addAnimalFragment_to_animalListFragment"
            app:destination="@id/animalListFragment"
            app:popUpTo="@id/animalListFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/animalDetailFragment"
        android:name="com.example.pawfecttail.AnimalDetailFragment"
        android:label="@string/detail_post"
        tools:layout="@layout/fragment_animal_detail" >
        <argument
            android:name="animal_id"
            app:argType="integer" />
        <action
            android:id="@+id/action_animalDetailFragment_to_addAnimalFragment"
            app:destination="@id/addAnimalFragment" />
    </fragment>
</navigation>